Add categories api

--- a/src/Microservices/Categories/API/Categories.API/Properties/launchSettings.json
+++ b/src/Microservices/Categories/API/Categories.API/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:32565",
+      "applicationUrl": "http://localhost:19045",
       "sslPort": 0
     }
   },
   "profiles": {
-    "Products.API": {
+    "Categories.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5081",
+      "applicationUrl": "http://localhost:5008",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
